Improve build of the docker container